--- a/styles.css
+++ b/styles.css
@@ -236,3 +236,33 @@ body::-webkit-scrollbar-thumb:hover {
     backdrop-filter: blur(20px);
     transition: background 0.5s ease-in-out;
 }
+
+
+.toaster {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #4CAF50;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    opacity: 0;
+    transform: translateY(100%);
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+    animation: slideUp 0.5s ease-in-out;
+  }
+
+  @keyframes slideUp {
+    0% {
+      transform: translateY(100%);
+    }
+
+    100% {
+      transform: translateY(0);
+    }
+  }
+
+  .toaster.show {
+    opacity: 1;
+    transform: translateY(0);
+  }
