--- a/styles.css
+++ b/styles.css
@@ -46,9 +46,6 @@ body::-webkit-scrollbar-thumb:hover {
     transition: transform 0.3s ease;
 }
 
-#element-p {
-    color: rgb(138, 1, 1);
-}
 
 @keyframes blink-dot {
 
@@ -78,7 +75,7 @@ body::-webkit-scrollbar-thumb:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to right, transparent, #00ff00);
+    background: linear-gradient(to right, transparent, #016a01);
     opacity: 0;
     transition: opacity 0.3s ease;
 }
@@ -226,15 +223,14 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .nav {
-    background: rgba(13, 13, 13, 0.138); 
-    backdrop-filter: blur(0px); 
+    background: rgba(0, 0, 0, 0.185); 
+    backdrop-filter: blur(2px); 
 }
 
 .nav.scrolled {
-    
-    background: rgba(4, 4, 4, 0.268);
-    backdrop-filter: blur(20px);
-    transition: background 0.5s ease-in-out;
+    background: rgba(4, 4, 4, 0.32);
+    backdrop-filter: blur(25px);
+    transition: background 0.3s ease-in-out;
 }
 
 .toaster {
@@ -255,10 +251,6 @@ body::-webkit-scrollbar-thumb:hover {
     0% {
       opacity: 0;
       transform: translateY(100%);
-      -webkit-transform: translateY(100%);
-      -moz-transform: translateY(100%);
-      -ms-transform: translateY(100%);
-      -o-transform: translateY(100%);
 }
 
     40% {
