--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,104 @@
 body {
     scroll-behavior: smooth;
     color: #049309;
+    background: black;
+}
+
+body.light-mode{
+    background-color: #fff;
+    color: #000;
+}
+body.light-mode .im  {
+    color: #727272 !important; 
+}
+
+body.light-mode .nav {
+    background: #ffffff ; 
+}
+
+body.light-mode #message {
+    background: #ffffff ; 
+}
+body.light-mode #email{
+    background: #ffffff ; 
 
 }
+body.light-mode #name {
+    background: #ffffff ; 
+
+}
+
+body.light-mode .card{
+    background: #ffffff ; 
+
+}
+body.light-mode .terminal{
+    background: #ffffff ; 
+}
+
+body.light-mode .wrd{
+    color: #000000 ; 
+}
+
+.toggle {
+    position: relative;
+    box-sizing: border-box;
+  }
+  .toggle input[type="checkbox"] {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    opacity: 0;
+  }
+  .toggle label {
+    position: relative;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+  }
+  .toggle label:before {
+    content: "";
+    width: 45px;
+    height: 25px;
+    background: #ffffff;
+    border: 1px solid #ddd;
+    box-shadow: inset -20px 0 0 #030303;
+    position: relative;
+    display: inline-block;
+    border-radius: 20px;
+    box-sizing: border-box;
+    transition: 0.25s ease-in;
+  }
+  
+  .toggle label:after {
+    content: "";
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    left: 3px;
+    top: 2.5px;
+    border-radius: 50%;
+    background: #fffdfd;
+    box-shadow: inset -8px -5px #333;
+    transition: 0.2s ease-in-out;
+  }
+  
+  .toggle input[type="checkbox"]:checked + label:before {
+    box-shadow: inset 20px 0 0 #ffeb00;
+  }
+  .toggle input[type="checkbox"]:checked + label:after {
+    box-shadow: inset 0 0 0 2px #ffffff;
+    background: #ffbc00;
+    left: 23px;
+    top: 2.5px;
+    border: 2px dashed #fff;
+  }
+  
+
 
 ::selection {
     background-color: rgb(6, 104, 3) !important;
@@ -26,6 +122,7 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb:hover {
     background-color: #f3f5f3;
 }
+
 
 .fade-in {
     opacity: 0;
@@ -249,3 +346,4 @@ body::-webkit-scrollbar-thumb:hover {
     opacity: 1;
     transform: translateY(0);
   }
+
