--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,21 @@ body {
     color: #049309;
     background: black;
 }
+body.light-mode .res , .abt {
+  color: #237d07;
+}
+
+body.light-mode .toaster {
+  background: #016a01;
+  color: rgb(255, 255, 255);
+}
+
+
+body.light-mode .ad:hover,
+body.light-mode .eml:hover {
+  color: rgb(0, 0, 0);
+}
+
 
 body.light-mode{
     background-color: #fff;
@@ -307,43 +322,49 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .toaster {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background: linear-gradient(90deg, #4aa72e42, #4ed12666);
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 5px;
-    opacity: 0;
-    transform: translateY(100%);
-    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
-    animation: fadeInBounce 0.8s ease-out;
-  }
-
-  @keyframes fadeInBounce {
-    0% {
-      opacity: 0;
-      transform: translateY(100%);
+  position: fixed;
+  top: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #016a01;
+  color: #fff;
+  padding: 10px 15px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+  display: flex;
+  align-items: center;
+  z-index: 9999;
+  max-width: 90%;
+  font-size: 14px;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
 }
 
-    40% {
-      opacity: 0.7;
-      transform: translateY(-20px);
-    }
+.icon {
+  width: 20px; 
+  height: 20px; 
+  margin-right: 8px;
+}
 
-    80% {
-      opacity: 1;
-      transform: translateY(-10px);
-    }
+.toaster.visible {
+  opacity: 1;
+  transform: translateX(-50%);
+}
 
-    100% {
-      opacity: 1;
-      transform: translateY(0);
-    }
+@media screen and (max-width: 768px) {
+  .toaster {
+    padding: 8px 12px; 
+    font-size: 12px; 
   }
 
-  .toaster.show {
-    opacity: 1;
-    transform: translateY(0);
+  .icon {
+    width: 16px;
+    height: 16px; 
+    margin-right: 5px; 
   }
+}
 
